--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </div>
         </section>
     </main>
+    <script src="./js/utilities.js"></script>
     <script src="./js/deposit.js"></script>
     <script src="./js/withdraw.js"></script>
 </body>
